--- a/src/GuessNumber.css
+++ b/src/GuessNumber.css
@@ -11,7 +11,7 @@ body {
 }
 
 .box1 {
-  background-color: #243cb7;
+  background-color: pink;
   position: absolute;
   top: 0;
   width: 100%;
@@ -37,7 +37,7 @@ body {
   left: 50%;
   background: #fff;
   padding: 50px 10px;
-  border: 10px solid #243cb7;
+  border: 10px solid pink;
   border-radius: 10px;
   display: grid;
   justify-items: center;
